# build-your-own-3D-model-python

./: README.md  pyproject.toml
src/_3d_modeller/: __init__.py  interaction.py  node.py  scene.py  viewer.py
