[project]
name = "3d-modeller"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Veronicandemo", email = "ndemoveronica@gmial.com" }
]
dependencies = [
    "ruff>=0.5.6",
    "pyopengl>=3.1.7",
    "pyopengl-accelerate>=3.1.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_3d_modeller"]
